# PolisAndSiege

./: .rustfmt.toml  Cargo.toml  README.md
assets/: halftone.sksl
src/: ai.rs  app_state.rs  cbor.rs  game_state.rs  input.rs  main.rs  render.rs  render_cityselection.rs  render_game.rs  skia.rs
src/ai/: army_placement.rs  base.rs  computer_turn.rs  difficulty.rs  game.rs  game_state.rs  move.rs  moves.rs  possible_move.rs  rules.rs  scoring.rs  temp_player.rs  tree_search.rs
src/fonts/: ebgaramond.rs
src/lib/: cbor.rs  skia.rs
src/model/: ai_profile.rs  city.rs  city_state.rs  connection.rs  location.rs  math.rs  player.rs  profile.rs  scoring.rs  territory.rs  territory_polygon.rs  world_fixed.rs  world_state.rs
src/render/: army_placement.rs  city_selection.rs  entry.rs  lower_panel.rs  randomising.rs  region_summary.rs  render.rs  surround.rs  title_bar.rs
